--- a/discovery-frontend/src/assets/css/polaris.v2.page.css
+++ b/discovery-frontend/src/assets/css/polaris.v2.page.css
@@ -8376,6 +8376,17 @@ em.ddp-icon-mapview3-w:before {background-position-x:0;}
 .ddp-table-info tr td {color:#fff; font-size:13px; }
 .ddp-table-info tr + tr th,
 .ddp-table-info tr + tr td {padding-top:6px;}
+.ddp-wrap-remark {position:absolute; top:20px; right:0; bottom:20px; box-sizing:border-box;}
+.ddp-layout-remark {width:200px; max-height:100%; background-color:#fff; border:1px solid #e7e7ea; border-radius:2px; overflow:auto; box-sizing:border-box;}
+.ddp-layout-remark .ddp-ui-layer {padding:24px 20px;}
+.ddp-layout-remark .ddp-ui-layer + .ddp-ui-layer {border-top:1px solid #ededee;}
+.ddp-layout-remark .ddp-ui-layer .ddp-label {display:block; padding-bottom:16px; color:#4a515c; font-size:14px; font-weight:bold;}
+.ddp-layout-remark .ddp-ui-layer .ddp-data {display:block; padding-bottom:12px;color:#90969f; font-size:12px;}
+.ddp-layout-remark .ddp-ui-layer .ddp-list-remark li {color:#4a515c; font-size:12px; vertical-align:middle;}
+.ddp-layout-remark .ddp-ui-layer .ddp-list-remark li em.ddp-bg-remark-r,
+.ddp-layout-remark .ddp-ui-layer .ddp-list-remark li em.ddp-bg-remark {display:inline-block; width:14px; height:14px; margin-right:6px;  vertical-align:middle;}
+.ddp-layout-remark .ddp-ui-layer .ddp-list-remark li em.ddp-bg-remark-r {border-radius:50%;}
+.ddp-layout-remark .ddp-ui-layer .ddp-list-remark li + li {padding-top:14px;}
 .ddp-list-datavalue > li {position:relative; padding:5px 28px 5px 10px; background-color:#eeeef0; color:#4a525c; font-size:13px; cursor:pointer;}
 .ddp-list-datavalue > li + li {margin-top:2px;}
 .ddp-list-datavalue li em[class*="ddp-icon-dimension-"],
