#1004 Add "Tango GIS" Map Style

--- a/discovery-frontend/src/app/page/chart-style/map/map-common-option.component.html
+++ b/discovery-frontend/src/app/page/chart-style/map/map-common-option.component.html
@@ -30,6 +30,7 @@
                   <li (click)="changeMapType('Colored')"><a href="#">Colored</a></li>
                   <li (click)="changeMapType('Light')"><a href="#">Light</a></li>
                   <li (click)="changeMapType('Dark')"><a href="#">Dark</a></li>
+                  <li (click)="changeMapType('TangoGis')"><a href="#">Tango GIS</a></li>
                 </ul>
               </div>
               <!-- //SELECTBOX -->
