--- a/discovery-frontend/src/app/common/component/chart/type/map-chart/map-chart.component.html
+++ b/discovery-frontend/src/app/common/component/chart/type/map-chart/map-chart.component.html
@@ -7,3 +7,7 @@
 </div>
 <!-- tooltip -->
 <div id="popup"><div id="popup-contents" style="width:257px;"></div></div>
+
+<!-- Feature icon clone canvas -->
+<canvas #feature style="visibility: hidden; position: fixed; top: 0px; left: 0px;"></canvas>
+<!-- //Feature icon clone canvas -->
