--- a/discovery-frontend/src/app/page/chart-style/map/map-layer-option.component.html
+++ b/discovery-frontend/src/app/page/chart-style/map/map-layer-option.component.html
@@ -453,8 +453,7 @@
                   <div class="ddp-wrap-option-slider">
                     <span class="ddp-label-slider">{{'msg.page.layer.map.cluster' | translate}}</span>
                     <!-- Slide THREE -->
-                    <div [ngClass]="{'ddp-checkbox-slide ddp-checkbox-automatic2' : true, 'ddp-disabled' : 'CIRCLE' != uiOption.layers[0].symbol && 'SQUARE' != uiOption.layers[0].symbol && 'TRIANGLE' != uiOption.layers[0].symbol}"
-                         [ngStyle]="{'cursor': 'CIRCLE' != uiOption.layers[0].symbol && 'SQUARE' != uiOption.layers[0].symbol && 'TRIANGLE' != uiOption.layers[0].symbol ? 'no-drop' : null }">
+                    <div class="ddp-checkbox-slide ddp-checkbox-automatic2">
                       <input type="checkbox" value="None" id="check2" name="check" [ngModel]="uiOption.layers[0]['clustering']" (click)="isEnableClustering();">
                       <label for="check2"><span class="ddp-slide"></span></label>
                     </div>
